feat: Adicionado parametro para pesquisar o clube pela descrição do municipio
